# PRACTICA_TPA

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: gestor.db
docs/: search.js  src.html
docs/src/: cli.html  main.html
src/: cli.py  gui.py  main.py
src/models/: tarea.py
src/services/: gestor_inventario.py  gestor_presupuestos.py  gestor_tareas.py
src/storage/: database.py  persistencia.py
src/utils/: logging_config.py
tests/: conftest.py  test_database.py  test_gestor_tareas.py  test_integration_cli.py  test_persistencia.py  test_presupuestos.py  test_presupuestos_extra.py  test_smoke.py  test_tarea.py
