[tool.black]
line-length = 88
target-version = ["py311","py312","py313"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project]
name = "gestor-cli-tpa"
version = "0.1.0"
description = "Gestor CLI de tareas (PRAC2)"
requires-python = ">=3.11"